# StudentsCompass

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  OAUTH_SETUP.md  PROJECT_STRUCTURE.md  README.md  alembic.ini  main.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  test.db
alembic/: env.py
alembic/versions/: 025e4d7c446f_add_first_name_last_name_nickname_to_.py  05d0f99636af_add_job_analysis_table_for_async_cv_.py  (+36 more)
app/: app.py  config.py  db.py  logging.py  template_utils.py
docs/: ai_cost_controls.md  capstone_optimization_guide.html  capstone_optimization_guide.md  capstone_phase_1_academic_plan.md  studentscompass_overview_para_venta.md
scripts/: create_superuser.py  migrate_sqlite_to_postgres.py  seed_communities.py  seed_resources.py  seed_roadmaps.py  test_embedding.py
tests/: README.md  TESTING_STATUS.md  conftest.py  test_ai_budget_guard.py  test_ai_quota_reserve.py  test_ai_request_rate_limit.py  test_ai_usage.py  test_applications.py  test_auth.py  test_capstone_analytics_models.py  test_capstone_skill_from_cv_text.py  test_career_lab_view.py  test_communities.py  test_company_applicants.py  test_company_recruiters.py  test_counter_store.py  test_dashboard.py  test_embedding_service.py  test_friendships.py  test_job_board.py  test_llm_retry.py  test_media_storage.py  test_messages.py  test_posts.py  test_profile.py  test_questionnaire_profile.py  test_register_rate_limit.py  test_resource_storage.py  test_resume.py  test_resume_analysis.py  test_resume_privacy.py  test_roadmap_route.py  test_sitemap.py  test_template_utils.py  test_upload_size_limit.py
(+236 files in other folders)
