[project]
name = "studentscompass"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.128.0",
    "fastapi-users[sqlchemy]>=14.0.2",
    "imagekitio>=5.0.0",
    "jinja2>=3.1.6",
    "pillow>=12.1.0",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.39.0",
]
