[project]
name = "studentscompass"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.1",
    "fastapi>=0.128.0",
    "fastapi-users[sqlalchemy,sqlchemy]>=14.0.2",
    "imagekitio>=5.0.0",
    "jinja2>=3.1.6",
    "pillow>=12.1.0",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.39.0",
    "beautifulsoup4>=4.12.3",
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.1.0",
    "apify-client>=2.4.0",
    "google-genai>=1.59.0",
    "pymupdf>=1.26.7",
    "google-api-python-client>=2.188.0",
    "google-auth>=2.47.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.4",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
]
